# gcop-rs

./: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
docs/guide/: configuration.md  providers.md
docs/guide/commands/: commit.md  stats.md
docs/guide/troubleshooting/: configuration.md
docs/release-notes/: v0.1.0.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.14.0.md  v0.2.1.md  v0.6.0.md
docs/zh/guide/: configuration.md  providers.md
docs/zh/guide/commands/: commit.md
docs/zh/guide/troubleshooting/: configuration.md
docs/zh/release-notes/: v0.1.0.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.14.0.md  v0.2.1.md  v0.6.0.md
examples/: config.toml.example  config.toml.example.zh  project-config.toml.example  project-config.toml.example.zh
homebrew/: gcop-rs.rb
locales/: en.yml  zh-CN.yml
python/: pyproject.toml
src/: cli.rs  main.rs
src/commands/: commit.rs  hook.rs  mod.rs  options.rs  review.rs  split.rs  stats.rs
src/commands/agent/: atomic_io.rs  claude.rs  codex.rs  instructions_writer.rs  mod.rs  paths.rs  render.rs  reporter.rs  sentinel.rs  skill_writer.rs
src/commands/agent/templates/: instructions-block.md  skill-claude.md  skill-codex.md
src/config/: loader.rs  mod.rs  tests.rs
src/config/structs/: app.rs  commit.rs  llm.rs  mod.rs
src/git/: commit.rs  diff.rs  history.rs  mod.rs  repository.rs
src/llm/: budget.rs  history_sampler.rs  mod.rs  prompt.rs
src/llm/prompts/: commit_system.txt
src/llm/provider/: fallback.rs  mod.rs  test_utils.rs  utils.rs
src/llm/provider/backends/: claude.rs  gemini.rs  ollama.rs  openai.rs
src/llm/provider/base/: config.rs  mod.rs  response.rs  sanitize.rs
src/llm/provider/streaming/: mod.rs  openai.rs
src/ui/: spinner.rs
tests/: agent_e2e_test.rs  commit_history_injection_test.rs  commit_main_loop_test.rs  git_commit_test.rs  git_history_test.rs  git_repository_test.rs  integration_test.rs  project_config_test.rs  provider_validation_test.rs  split_integration_test.rs  stats_contrib_test.rs  stats_test.rs
