[package]
name = "gcop-rs"
version = "0.14.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
description = "AI-powered Git commit message generator and code reviewer"
authors = [
    "AptS-1547 <apts-1547@esaps.net>",
    "AptS-1738 <apts-1738@esaps.net>",
    "uaih3k9x <uaih3k9x@gmail.com>"
]
repository = "https://github.com/AptS-1547/gcop-rs"
homepage = "https://github.com/AptS-1547/gcop-rs"
keywords = ["git", "commit", "ai", "code-review", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# 优化配置
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
panic = "unwind"
strip = false
incremental = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
codegen-units = 1
debug = true
strip = false
lto = false

[dependencies]
anyhow = "1.0"
arc-swap = "1.9"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "color"] }
console = "0.16"
colored = "3"
config = { version = "0.15", default-features = false, features = ["toml"] }
inquire = "0.9"
directories = "6.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
git2 = {version = "0.21", default-features = false }
globset = "0.4"
httpdate = "1.0"
indicatif = "0.18.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider", "socks", "stream", "system-proxy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rust-i18n = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
mockall = { version = "0.14", optional = true }  # 测试工具
which = "8.0.2"
edit = { version = "0.1.5", features = ["better-path", "quoted-env"] }
serde_yaml_ng = "0.10.0"
human-panic = "2.0.8"
tempfile = "3.27"           # 原子文件写 (agent install)

[lib]
name = "gcop_rs"
path = "src/lib.rs"

[features]
test-utils = ["mockall"]  # 测试工具 feature

[dev-dependencies]
mockito = "1.7"             # HTTP API mock
pretty_assertions = "1.4"   # 更好的 assert 输出
serial_test = "3.4"         # 环境变量测试串行化
gcop-rs = { path = ".", features = ["test-utils"] }  # 启用测试工具 feature
bytes = "1"                 # 构造测试 streaming response
http = "1"                  # 构造测试 HTTP response

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "zh-CN"]

# The default locale, default: "en".
default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
load-path = "locales"

# cargo-binstall 配置
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gcop-rs-v{ version }-{ target }{ archive-suffix }"
bin-dir = "gcop-rs-v{ version }-{ target }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/gcop-rs-v{ version }-macos-amd64"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/gcop-rs-v{ version }-macos-arm64"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/gcop-rs-v{ version }-linux-amd64"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/gcop-rs-v{ version }-linux-arm64"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/gcop-rs-v{ version }-windows-amd64.exe"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/gcop-rs-v{ version }-windows-aarch64.exe"
