[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "gcop-rs"
version = "0.14.0"
description = "AI-powered Git commit message generator and code reviewer (Rust version)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "AptS-1547", email = "apts-1547@esaps.net" },
    { name = "AptS-1738", email = "apts-1738@esaps.net" },
    { name = "uaih3k9x", email="uaih3k9x@gmail.com" }
]
keywords = ["git", "commit", "ai", "code-review", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/AptS-1547/gcop-rs"
Repository = "https://github.com/AptS-1547/gcop-rs"
Issues = "https://github.com/AptS-1547/gcop-rs/issues"

[tool.maturin]
bindings = "bin"
manifest-path = "../Cargo.toml"
strip = true
